--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- BARRA DE NAVEGACIÓN -->
     <nav>
         <img class="logotipo" src="imagenes/logoen3.png">
-        <div class="logo">HOLA MUNDOOOOOOOO<br><h1 class="tienda">Tu Tienda de Segunda Mano</h1></div>
+        <div class="logo">HOLA MUNDOOOOOOOO, HOLA LUIS<br><h1 class="tienda">Tu Tienda de Segunda Mano</h1></div>
 
          
         <ul class="menu-horizontal">
